[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project in my education"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
 { include = "gendiff" },
 ]

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
